new branch commit test

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="profile">
       <img class="profile-pic" src="images/programmer.png" alt="Profile Pic">
       <h2>Hello.</h2>
-      <p>I'm a Full Stack Developer. I develop web apps and websites.</p>
+      <p>I'm a Full Stack Developer. I develop Web Apps and Websites.</p>
     </div>
     <br>
     <hr>
